--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="home-img">
-            <img src="" alt="">
+            <img src="/images/home.png" alt="">
         </div>
     </section>
 
