--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/IMG_20220311_204530.jp" alt="">
+            <img src="images/about.png" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Devloper</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos saepe, mollitia quas ad sed eaque quaerat praesentium, nisi, laudantium eos veritatis tenetur cum natus blanditiis ex rem temporibus consequatur. Possimus.</p>
-            <a href="#" class="btn">Read More</a>
+            <p>Hi, I'm Lakshay Sharma — a passionate and detail-oriented web developer currently pursuing my MCA. I specialize in building responsive, user-friendly websites using HTML, CSS, JavaScript, Node.js, and MongoDB. My goal is to create clean, efficient code and develop seamless digital experiences that solve real-world problems. I’m constantly learning and working on new projects to stay ahead in the ever-evolving tech world. Let’s build something amazing together!</p>
+            <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
 
