Frist project added

--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
 
         <div class="project-container">
             <div class="project-box">
-                <img src="images/project1.jpg" alt="">
+                <img src="images/pinclone.png" alt="">
                 <div class="project-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id?</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Pinterest Clone</h4>
+                    <p>A Pinterest clone built using Node.js, Express, and MongoDB. Designed to replicate core Pinterest functionality.</p>
+                    <a href="https://pinterest-clone-m0a6.onrender.com" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <!-- <span class="status-tag">Code Only (Not Live)</span> -->
                 </div>
             </div>
 
