--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lakshay Sharma | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    
+
     <!-- box icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
     <header class="header">
         <a href="#" class="logo">Lakshay</a>
 
@@ -34,28 +34,38 @@
             <h1>Lakshay Sharma</h1>
             <h3>And I'm a <span id="multitext"></span></h3>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bx-envelope' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bx-envelope'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-facebook'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <picture>
+                <source srcset="images/home.webp" type="image/webp">
+                <img src="images/home.png" alt="Hero image" />
+            </picture>
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/about.png" alt="">
+            <picture>
+                <source srcset="images/about.webp" type="image/webp">
+                <img src="images/about.png" alt="About image" />
+            </picture>
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend Devloper</h3>
-            <p>Hi, I'm Lakshay Sharma — a passionate and detail-oriented web developer currently pursuing my MCA. I specialize in building responsive, user-friendly websites using HTML, CSS, JavaScript, Node.js, and MongoDB. My goal is to create clean, efficient code and develop seamless digital experiences that solve real-world problems. I’m constantly learning and working on new projects to stay ahead in the ever-evolving tech world. Let’s build something amazing together!</p>
+            <h3>Web Developer</h3>
+            <p>Hi, I'm Lakshay Sharma — a passionate and detail-oriented web developer currently pursuing my MCA. I
+                specialize in building responsive, user-friendly websites using HTML, CSS, JavaScript, Node.js, and
+                MongoDB. My goal is to create clean, efficient code and develop seamless digital experiences that solve
+                real-world problems. I’m constantly learning and working on new projects to stay ahead in the
+                ever-evolving tech world. Let’s build something amazing together!</p>
             <!-- <a href="#" class="btn">Read More</a> -->
         </div>
     </section>
@@ -68,8 +78,10 @@
                 <img src="images/pinclone.png" alt="">
                 <div class="project-layer">
                     <h4>Pinterest Clone</h4>
-                    <p>A Pinterest clone built using Node.js, Express, and MongoDB. Designed to replicate core Pinterest functionality.</p>
-                    <a href="https://pinterest-clone-m0a6.onrender.com" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <p>A Pinterest clone built using Node.js, Express, and MongoDB. Designed to replicate core Pinterest
+                        functionality.</p>
+                    <a href="https://pinterest-clone-m0a6.onrender.com" target="_blank"><i
+                            class='bx bx-link-external'></i></a>
                     <!-- <span class="status-tag">Code Only (Not Live)</span> -->
                 </div>
             </div>
@@ -101,7 +113,7 @@
 
         <div class="contact-container">
             <div class="contact-box">
-                <i class='bx bxs-home-alt-2' ></i>
+                <i class='bx bxs-home-alt-2'></i>
                 <h3>Address</h3>
                 <h4>Rajasthan, Ajmer</h4>
             </div>
@@ -113,7 +125,7 @@
             </div>
 
             <div class="contact-box">
-                <i class='bx bxs-paper-plane' ></i>
+                <i class='bx bxs-paper-plane'></i>
                 <h3>Email Address</h3>
                 <h4>lakshay0328@gmail.com</h4>
             </div>
@@ -137,4 +149,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
